--- a/Visualize_ECG5000.ipynb
+++ b/Visualize_ECG5000.ipynb
@@ -6,7 +6,7 @@
       "name": "Visualize ECG5000",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMsl6vhL0FdOPDdyxuhRMHw",
+      "authorship_tag": "ABX9TyNxy43zV5m7eC0vREU41ZLD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "import seaborn as sns\n",
         "sns.set()"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
         "print(\"y is of type: {}\".format(type(y)))\n",
         "print(\"y has length of: {}\".format(len(y)))\n"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,33 +79,24 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 395
+          "height": 377
         },
         "id": "tSJq_ZXES4AX",
-        "outputId": "f1b63b6d-14b0-44b6-a01a-528d27bf366a"
+        "outputId": "0bc02874-792a-41fb-aebd-491bca5dd5b7"
       },
       "source": [
-        "# Is redundant but for better understanding for the plot\n",
+        "# Is redundant but for better understanding of the plot\n",
         "x = np.arange(0, len(y), 1)\n",
         "\n",
         "# Set figure size\n",
         "plt.figure(figsize=(25,6))\n",
-        "plt.plot(x, y, linewidth = 0.1, color=\"blue\")"
+        "plt.plot(x, y, linewidth = 0.1, color=\"blue\")\n",
+        "\n",
+        "# for saving the plot on locale drive\n",
+        "# plt.savefig(\"ecg5000.png\", format='png', dpi=150)"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f8ef4742a90>]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 85
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -119,39 +110,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "y0bdgna2F9tu"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "s4GMzYzlT8EX"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "scKyFlaIT5eZ"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
