--- a/Visualize_ECG5000_V2_0.ipynb
+++ b/Visualize_ECG5000_V2_0.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPknLkcwRDXmSrz3PkDh1dn",
+      "authorship_tag": "ABX9TyM4r9uOdYF4/KvWUKT99AJC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "### Load ecg5000 data using read_csv\n",
         "ecg5000 = pd.read_csv('ECG5000_TRAIN.txt', sep='\\s+', header=None)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -90,11 +90,15 @@
         "### Plot data \n",
         "# Define compromised version of ecg5000 data (redundant but better for visualization)\n",
         "new_ecg5000 = ecg5000.iloc[:, 1:3]\n",
+        "\n",
         "# Define subplot (redundant but better for visualization)\n",
-        "fig, axes = plt.subplots(nrows=2, figsize=(25,12))\n",
+        "# fig, axes = plt.subplots(nrows=2, figsize=(25,12)) - uncomment if needed\n",
+        "# delete figsize(), add ax=axes[0] or ax=axes[1] to plots below\n",
+        "\n",
         "# Set figure characteristics and plot data\n",
-        "ecg5000.plot(linewidth = 0.3, title='ECG5000', ax=axes[0])\n",
-        "new_ecg5000.plot(linewidth = 0.3, title='ECG5000 ONLY COLUMN 1-2', ax=axes[1])\n",
+        "new_ecg5000.plot(figsize=(25,6), linewidth = 0.3, title='ECG5000 ONLY COLUMN 1-2')\n",
+        "ecg5000.plot(figsize=(25,6), linewidth = 0.3, title='ECG5000')\n",
+        "\n",
         "\n"
       ],
       "execution_count": null,
