--- a/Visualize_ECG5000_V2_0.ipynb
+++ b/Visualize_ECG5000_V2_0.ipynb
@@ -6,8 +6,7 @@
       "name": "Visualize_ECG5000_1.1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyM4r9uOdYF4/KvWUKT99AJC",
+      "authorship_tag": "ABX9TyPyD2hFBqKLG/XznxNH8ouR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,12 +44,13 @@
       },
       "source": [
         "### Preparation\n",
+        "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "sns.set()"
       ],
-      "execution_count": 1,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -73,7 +73,6 @@
       "source": [
         "### Optional test and info about data set\n",
         "print(\"Get type of ecg5000: {} \\n\".format(type(ecg5000)))\n",
-        "# Note ecg5000_df = DataFrame(ecg5000) converts series to df\n",
         "print(\"Get dimensions of ecg5000: {} \\n\".format(ecg5000.shape))\n",
         "print(\"Get number of elements of ecg5000: {} \\n\".format((ecg5000.size)))\n",
         "print(\"Display first 10 rows of ecg5000: \\n {}\".format(ecg5000.head(10)))"
@@ -100,6 +99,28 @@
         "ecg5000.plot(figsize=(25,6), linewidth = 0.3, title='ECG5000')\n",
         "\n",
         "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FCtYeZAQfvhM"
+      },
+      "source": [
+        "### Convert data to one dimensional array\n",
+        "fnp_ecg5000 = ecg5000.values.flatten()\n",
+        "type(fnp_ecg5000)\n",
+        "# first 141 entries present row 0 of not flattend data thus time point 0\n",
+        "fnp_ecg5000[:140]\n",
+        "\n",
+        "# inverse flatten\n",
+        "# flatten('F').reshape((3, 2), order='F')\n",
+        "np_ecg5000 = np.reshape(f_ecg5000,(500, 141))\n",
+        "\n",
+        "# convert to dataframe\n",
+        "pd.DataFrame(data=np_ecg5000)\n"
       ],
       "execution_count": null,
       "outputs": []
