convert to 2D dataframe in plot

--- a/VAE_v1_2.ipynb
+++ b/VAE_v1_2.ipynb
@@ -287,7 +287,7 @@
         "print(x_train.shape)\n",
         "print(decoded_ecg5000.shape)\n",
         "\n",
-        "### Covert to 2D DataFrame and only show column 0\n",
+        "### Covert to 2D DataFrame\n",
         "new_x_train= x_train.reshape(-1,140)\n",
         "new_decoded_ecg5000 = decoded_ecg5000.reshape(-1,140)\n",
         "\n",
