Added Comments in Plotting-Section

--- a/VAE_v1_2.ipynb
+++ b/VAE_v1_2.ipynb
@@ -518,16 +518,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "f087a9ba-a01c-4bd8-80d3-c9e1c3f7e332"
+        "outputId": "949b080d-dd77-486c-eee1-d68f34efef84"
       },
       "source": [
         "### Plot Multiple Times\n",
-        "n_rows = 3                     \n",
+        "n_rows = 3                   \n",
         "n_cols = 2\n",
         "\n",
+        "# Size Properties\n",
         "fig, axs = plt.subplots(nrows = n_rows, ncols = n_cols, figsize=(23,20))\n",
         "fig.tight_layout(w_pad=4, h_pad = 5)\n",
         "\n",
+        "# Subplotting\n",
         "i = 0\n",
         "for row in range(n_rows):\n",
         "  for col in range(n_cols):\n",
@@ -537,7 +539,7 @@
         "    axs[row, col].set(xlabel = \"Time Steps\", ylabel = \"Heartbet Interpolated\", title = \"Sample {}\".format(i))\n",
         "    i = i + 1\n"
       ],
-      "execution_count": 67,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "display_data",
