add z_mean, z_var layer to encoder

--- a/VAE_v1_2.ipynb
+++ b/VAE_v1_2.ipynb
@@ -199,7 +199,15 @@
         "id": "BuO7o5GGYg3y"
       },
       "source": [
-        "#############################################################sample flyer function die für vae verwendet wird"
+        "class Sampling(layers.Layer):\r\n",
+        "    \"\"\"Uses (z_mean, z_log_var) to sample z, the vector encoding a digit.\"\"\"\r\n",
+        "\r\n",
+        "    def call(self, inputs):\r\n",
+        "        z_mean, z_log_var = inputs\r\n",
+        "        batch = tf.shape(z_mean)[0]\r\n",
+        "        dim = tf.shape(z_mean)[1]\r\n",
+        "        epsilon = tf.keras.backend.random_normal(shape=(batch, dim))\r\n",
+        "        return z_mean + tf.exp(0.5 * z_log_var) * epsilon"
       ],
       "execution_count": null,
       "outputs": []
