update decoder and add layer

--- a/VAE_v1_2.ipynb
+++ b/VAE_v1_2.ipynb
@@ -6,6 +6,7 @@
       "name": "VAE_v1_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +47,7 @@
         "import seaborn as sns\n",
         "sns.set()"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -82,7 +83,7 @@
         "### Delete label-column first (column 0)\n",
         "ecg5000.drop(ecg5000.columns[[0]], axis=1, inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -135,7 +136,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0FuU0-HYavQx"
+        "id": "0FuU0-HYavQx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fdb4b191-889d-42b3-d3b5-a9496433f766"
       },
       "source": [
         "### Split Data into 80/20 Training, Test\n",
@@ -144,8 +149,17 @@
         "print(\"Shape of Training DataFrame: \\t {}\".format(trainDF.shape))\n",
         "print(\"Shape of Test DataFrame: \\t {}\".format(testDF.shape))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Shape of Training DataFrame: \t (4000, 140)\n",
+            "Shape of Test DataFrame: \t (1000, 140)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -159,7 +173,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "stkCjqkHiHBo"
+        "id": "stkCjqkHiHBo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2c7a5819-fe09-4a8a-a0bc-60c3a37d4149"
       },
       "source": [
         "### Convert to array\n",
@@ -178,8 +196,17 @@
         "print(\"Shape of reshaped train dataset: {}\".format(x_train.shape))\n",
         "print(\"Shape of reshaped test dataset: {}\".format(x_test.shape))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Shape of reshaped train dataset: (4000, 140, 1)\n",
+            "Shape of reshaped test dataset: (1000, 140, 1)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -209,7 +236,7 @@
         "        epsilon = tf.keras.backend.random_normal(shape=(batch, dim))\r\n",
         "        return z_mean + tf.exp(0.5 * z_log_var) * epsilon"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -249,7 +276,7 @@
         "epochs = 50\r\n",
         "latent_dim = 2"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -268,17 +295,17 @@
       },
       "source": [
         "### Define Encoder Layers\r\n",
-        "inputs = keras.Input(shape=(140, 1), name='Input_layer')\r\n",
-        "encoded = Bidirectional(layers.LSTM(encoding_dim, activation='tanh', name='Encode_1'))(inputs)\r\n",
-        "#5, because 5 class in data ecg5000 - evtl 2,1\r\n",
-        "encoded = layers.Dense(5, activation='tanh', name='Encode_2')(encoded)\r\n",
-        "# VAE\r\n",
-        "z_mean = layers.Dense(latent_dim, name=\"z_mean\")(encoded)\r\n",
+        "encoder_inputs = keras.Input(shape=(140, 1), name='Encoder_Input_layer')\r\n",
+        "\r\n",
+        "encoded = Bidirectional(layers.LSTM(encoding_dim, activation='tanh'), name='Encode_1')(encoder_inputs)\r\n",
+        "encoded = layers.Dense(5, activation='tanh', name='Encode_2')(encoded) #5, because 5 class in data ecg5000 - evtl 2,1\r\n",
+        "z_mean = layers.Dense(latent_dim, name=\"z_mean\")(encoded) \r\n",
         "z_log_var = layers.Dense(latent_dim, name=\"z_log_var\")(encoded)\r\n",
-        "z = Sampling()([z_mean, z_log_var])\r\n",
+        "\r\n",
+        "z = Sampling(name='Sample_layer')([z_mean, z_log_var])\r\n",
         "\r\n",
         "### Build Encoder\r\n",
-        "encoder = keras.Model(inputs, [z_mean, z_log_var, z], name=\"encoder\")\r\n",
+        "encoder = keras.Model(encoder_inputs, [z_mean, z_log_var, z], name=\"encoder\")\r\n",
         "encoder.summary()"
       ],
       "execution_count": null,
@@ -300,16 +327,37 @@
       },
       "source": [
         "### Define Decoder Layers\r\n",
-        "decoded = layers.Dense(140, activation='tanh', name='Decode_1')(encoded)\r\n",
+        "latent_inputs = keras.Input(shape=(latent_dim,), name='Decoder_Input_layer')\r\n",
+        "\r\n",
+        "decoded = layers.Dense(140, activation='tanh', name='Decode_1')(latent_inputs)\r\n",
         "decoded = layers.Reshape((140,1), name='Decode_2')(decoded)\r\n",
         "decoded = Bidirectional(layers.LSTM(encoding_dim, return_sequences=True, activation='tanh', name='Decode_3'))(decoded)\r\n",
-        "outputs = TimeDistributed(Dense(1, activation='tanh', name=''),name='Output_Layer')(decoded)\r\n",
+        "\r\n",
+        "decoder_outputs = TimeDistributed(Dense(1, activation='tanh', name=''),name='Decoder_Output_Layer')(decoded)\r\n",
         "\r\n",
         "### Build Decoder\r\n",
-        "##################################################################################decoder = keras.Model(encoded, outputs) somewhat\r\n",
-        "\r\n",
-        "### Build Variational Autoencoder\r\n",
-        "sequence_autoencoder = keras.Model(inputs, outputs)\r\n",
+        "decoder = keras.Model(latent_inputs, decoder_outputs, name=\"decoder\")\r\n",
+        "decoder.summary()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T7OlCIRCOUF-"
+      },
+      "source": [
+        "## Train VAE"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WR-wmYsdQXII"
+      },
+      "source": [
+        "sequence_autoencoder = keras.Model(encoder_inputs, decoder_outputs)\r\n",
         "sequence_autoencoder.summary()"
       ],
       "execution_count": null,
@@ -318,18 +366,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6xDtljwCBK3t"
+        "id": "BTkdJdc_N5SN"
       },
       "source": [
-        "### Train AE\r\n",
-        "##################################################################################change loss for VAE\r\n",
-        "sequence_autoencoder.compile(optimizer='adam', loss='binary_crossentropy')\r\n",
-        "history = sequence_autoencoder.fit(x_train, x_train,\r\n",
+        "### Train\r\n",
+        "vae.compile(optimizer='adam', loss='binary_crossentropy')\r\n",
+        "history = vae.fit(x_train, x_train,\r\n",
         "                epochs=epochs,\r\n",
         "                batch_size=32,\r\n",
         "                shuffle=True,\r\n",
-        "                validation_data=(x_test, x_test))\r\n",
-        "\r\n",
+        "                validation_data=(x_test, x_test))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E-4uxGq4PgAv"
+      },
+      "source": [
         "### Recreation\r\n",
         "decoded_ecg5000 = sequence_autoencoder.predict(x_train)\r\n",
         "plot_model(sequence_autoencoder, show_shapes=True, to_file='reconstruct_lstm_autoencoder.png')"
@@ -394,7 +450,7 @@
         "id": "AwjUjaCtkSpW"
       },
       "source": [
-        "### Plot Multiple Times\n",
+        "### Plot Multiple Samples\n",
         "n_rows = 3                   \n",
         "n_cols = 2\n",
         "\n",
