plot and show summary of vae, encoder, decoder

--- a/VAE_v2.0.ipynb
+++ b/VAE_v2.0.ipynb
@@ -90,10 +90,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "QdbiFe4pZlQv",
-        "outputId": "966360ec-32ff-4818-f305-ed6e10221013",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "966360ec-32ff-4818-f305-ed6e10221013"
       },
       "source": [
         "### Optional test and info about data set\n",
@@ -351,7 +351,7 @@
         "### Define Encoder Layers\r\n",
         "encoder_inputs = keras.Input(shape=(140, 1), name='Encoder_Input_layer')\r\n",
         "\r\n",
-        "encoded = Bidirectional(layers.LSTM(encoding_dim, activation='tanh'), name='Encode_1')(encoder_inputs)\r\n",
+        "encoded = Bidirectional(layers.LSTM(encoding_dim, activation='tanh', name=''), name='Encode_1')(encoder_inputs)\r\n",
         "encoded = layers.Dense(5, activation='tanh', name='Encode_2')(encoded) #5, because 5 class in data ecg5000 - evtl 2,1\r\n",
         "z_mean = layers.Dense(latent_dim, name=\"z_mean\")(encoded) \r\n",
         "z_log_var = layers.Dense(latent_dim, name=\"z_log_var\")(encoded)\r\n",
@@ -360,7 +360,9 @@
         "\r\n",
         "### Build Encoder\r\n",
         "encoder = keras.Model(encoder_inputs, [z_mean, z_log_var, z], name=\"encoder\")\r\n",
-        "encoder.summary()"
+        "\r\n",
+        "encoder.summary()\r\n",
+        "plot_model(encoder, show_shapes=True, to_file='reconstruct_lstm_encoder.png')"
       ],
       "execution_count": null,
       "outputs": []
@@ -385,13 +387,15 @@
         "\r\n",
         "decoded = layers.Dense(140, activation='tanh', name='Decode_1')(latent_inputs)\r\n",
         "decoded = layers.Reshape((140,1), name='Decode_2')(decoded)\r\n",
-        "decoded = Bidirectional(layers.LSTM(encoding_dim, return_sequences=True, activation='tanh'), name='Decode_3')(decoded)\r\n",
+        "decoded = Bidirectional(layers.LSTM(encoding_dim, return_sequences=True, activation='tanh', name=''), name='Decode_3')(decoded)\r\n",
         "\r\n",
         "decoder_outputs = TimeDistributed(Dense(1, activation='tanh', name=''),name='Decoder_Output_Layer')(decoded)\r\n",
         "\r\n",
         "### Build Decoder\r\n",
         "decoder = keras.Model(latent_inputs, decoder_outputs, name=\"decoder\")\r\n",
-        "decoder.summary()"
+        "\r\n",
+        "decoder.summary()\r\n",
+        "plot_model(decoder, show_shapes=True, to_file='reconstruct_lstm_decoder.png')"
       ],
       "execution_count": null,
       "outputs": []
@@ -419,7 +423,7 @@
         "vae = keras.Model(encoder_inputs, decoder_outputs, name='vae_v2_0')\r\n",
         "\r\n",
         "vae.summary()\r\n",
-        "plot_model(vae, show_shapes=True, to_file='reconstruct_lstm_autoencoder.png')"
+        "plot_model(vae, show_shapes=True, to_file='reconstruct_lstm_variational_autoencoder.png')"
       ],
       "execution_count": null,
       "outputs": []
@@ -481,7 +485,7 @@
         "vae.compile(optimizer='adam', loss='binary_crossentropy')\r\n",
         "#vae.fit(x_train, epochs=epochs, batch_size=batch_size)"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -490,14 +494,12 @@
         "id": "E-4uxGq4PgAv"
       },
       "source": [
-        "#### TODO (1): PLOT VAE WITH plot_model FUNCTION\r\n",
         "#### TODO (2): GET LATENT VECTOR AND SHOW MYU AND SIGMA\r\n",
         "\r\n",
         "### Recreation\r\n",
         "bottleneck = encoder.predict(x_train)\r\n",
         "#decoded_ecg5000 = vae.predict(x_train)\r\n",
-        "decoded_ecg5000 = decoder.predict(bottleneck)\r\n",
-        "#plot_model(vae, show_shapes=True, to_file='reconstruct_lstm_autoencoder.png')"
+        "decoded_ecg5000 = decoder.predict(bottleneck)"
       ],
       "execution_count": null,
       "outputs": []
