--- a/VAE_v2.0.ipynb
+++ b/VAE_v2.0.ipynb
@@ -47,7 +47,7 @@
         "import seaborn as sns\n",
         "sns.set()"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,17 +83,13 @@
         "### Delete label-column first (column 0)\n",
         "ecg5000.drop(ecg5000.columns[[0]], axis=1, inplace=True)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QdbiFe4pZlQv",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6d938ce7-043e-4463-e66d-dede25006118"
+        "id": "QdbiFe4pZlQv"
       },
       "source": [
         "### Optional test and info about data set\n",
@@ -102,32 +98,8 @@
         "print(\"Number of elements of ecg5000: \\t {}\".format((ecg5000.size)))\n",
         "print(\"Display first 10 rows of ecg5000: \\n {}\".format(ecg5000.head(10)))"
       ],
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Type of ecg5000: \t \t <class 'pandas.core.frame.DataFrame'>\n",
-            "Dimensions of ecg5000: \t \t (5000, 140)\n",
-            "Number of elements of ecg5000: \t 700000\n",
-            "Display first 10 rows of ecg5000: \n",
-            "         1         2         3    ...       138       139       140\n",
-            "0 -0.112522 -2.827204 -3.773897  ...  0.123431  0.925286  0.193137\n",
-            "1 -1.100878 -3.996840 -4.285843  ...  0.773820  1.119621 -1.436250\n",
-            "2 -0.567088 -2.593450 -3.874230  ...  0.321097  0.904227 -0.421797\n",
-            "3  0.490473 -1.914407 -3.616364  ...  1.086798  1.403011 -0.383564\n",
-            "4  0.800232 -0.874252 -2.384761  ...  0.971020  1.614392  1.421456\n",
-            "5 -1.507674 -3.574550 -4.478011  ...  1.634990  1.493366 -0.783134\n",
-            "6 -0.297161 -2.766635 -4.102185  ...  1.110407  1.288165 -0.823386\n",
-            "7  0.446769 -1.507397 -3.187468  ...  1.258433  0.961215 -0.999476\n",
-            "8  0.087631 -1.753490 -3.304473  ...  0.192971 -0.648683 -2.441068\n",
-            "9 -0.832281 -1.700368 -2.257301  ...  2.126852  1.679299  0.965814\n",
-            "\n",
-            "[10 rows x 140 columns]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -141,11 +113,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WCvRjcSqjFED",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "16befc93-378f-4e87-b9d8-c89ac38e180a"
+        "id": "WCvRjcSqjFED"
       },
       "source": [
         "### Normalize dataframe with min-max-normalization to range between [-0.8, 0.8] using sklearn MinMaxScaler\n",
@@ -153,29 +121,8 @@
         "scaled_ecg5000 = pd.DataFrame(min_max_scaler.fit_transform(ecg5000))\n",
         "print(scaled_ecg5000)"
       ],
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "           0         1         2    ...       137       138       139\n",
-            "0     0.105202 -0.154680 -0.521072  ...  0.190712  0.256566 -0.054755\n",
-            "1    -0.030005 -0.331729 -0.626180  ...  0.305374  0.286734 -0.247949\n",
-            "2     0.043017 -0.119297 -0.541672  ...  0.225560  0.253297 -0.127667\n",
-            "3     0.187692 -0.016509 -0.488729  ...  0.360551  0.330726 -0.123133\n",
-            "4     0.230067  0.140940 -0.235867  ...  0.340140  0.363540  0.090885\n",
-            "...        ...       ...       ...  ...       ...       ...       ...\n",
-            "4995 -0.033027 -0.067751 -0.335005  ... -0.337752 -0.198844 -0.292066\n",
-            "4996  0.045669 -0.012746 -0.329288  ...  0.391322  0.291519  0.017785\n",
-            "4997 -0.064328 -0.061103 -0.263680  ... -0.229486 -0.132008 -0.158819\n",
-            "4998 -0.033227 -0.015091 -0.196437  ...  0.090797  0.026031 -0.064782\n",
-            "4999  0.220296  0.302430  0.103076  ...  0.440269  0.378969  0.077596\n",
-            "\n",
-            "[5000 rows x 140 columns]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -189,11 +136,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0FuU0-HYavQx",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "726d5399-1d53-4ad3-e20e-1a9985104cc0"
+        "id": "0FuU0-HYavQx"
       },
       "source": [
         "### Split Data into 80/20 Training, Test\n",
@@ -202,17 +145,8 @@
         "print(\"Shape of Training DataFrame: \\t {}\".format(trainDF.shape))\n",
         "print(\"Shape of Test DataFrame: \\t {}\".format(testDF.shape))"
       ],
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Shape of Training DataFrame: \t (4000, 140)\n",
-            "Shape of Test DataFrame: \t (1000, 140)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -226,11 +160,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "stkCjqkHiHBo",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "459aacb9-36bd-4509-b340-d1dd7ceccbb7"
+        "id": "stkCjqkHiHBo"
       },
       "source": [
         "### Convert to array\n",
@@ -249,17 +179,8 @@
         "print(\"Shape of reshaped train dataset: {}\".format(x_train.shape))\n",
         "print(\"Shape of reshaped test dataset: {}\".format(x_test.shape))"
       ],
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Shape of reshaped train dataset: (4000, 140, 1)\n",
-            "Shape of reshaped test dataset: (1000, 140, 1)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -289,7 +210,7 @@
         "        epsilon = tf.keras.backend.random_normal(shape=(batch, dim))\r\n",
         "        return z_mean + tf.exp(0.5 * z_log_var) * epsilon"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -330,7 +251,7 @@
         "epochs = 50\r\n",
         "batch_size = 32"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -339,7 +260,7 @@
         "id": "6hcpCe0zGwQl"
       },
       "source": [
-        "### Encoder"
+        "## Encoder"
       ]
     },
     {
@@ -373,7 +294,7 @@
         "id": "Z_PrqOCOG244"
       },
       "source": [
-        "### Decoder"
+        "## Decoder"
       ]
     },
     {
@@ -406,7 +327,7 @@
         "id": "RAKUqMR8oSm6"
       },
       "source": [
-        "### Connecting the Encoder and Decoder"
+        "## Connecting the Encoder and Decoder"
       ]
     },
     {
@@ -483,7 +404,7 @@
         "            \"kl_loss\": kl_loss,\r\n",
         "        }"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -506,7 +427,11 @@
         "### Train\r\n",
         "vae = VAE(encoder, decoder, name=\"VAE\")\r\n",
         "vae.compile(optimizer='adam', loss='binary_crossentropy')\r\n",
-        "history = vae.fit(x_train, epochs=epochs, batch_size=batch_size)"
+        "history = vae.fit(x_train, epochs=epochs, batch_size=batch_size)\r\n",
+        "\r\n",
+        "### Recreation\r\n",
+        "bottleneck = encoder.predict(x_train)\r\n",
+        "decoded_ecg5000 = decoder.predict(bottleneck)"
       ],
       "execution_count": null,
       "outputs": []
@@ -533,11 +458,7 @@
       "source": [
         "#### TODO (2): GET LATENT VECTOR AND SHOW MYU AND SIGMA\r\n",
         "print(z_log_var)\r\n",
-        "print(z_mean)\r\n",
-        "\r\n",
-        "### Recreation\r\n",
-        "bottleneck = encoder.predict(x_train)\r\n",
-        "decoded_ecg5000 = decoder.predict(bottleneck)"
+        "print(z_mean)"
       ],
       "execution_count": null,
       "outputs": []
@@ -613,7 +534,7 @@
         "print(\"Shape of Input x_train: {}\".format(x_train.shape))\n",
         "print(\"Shape of Output y_train: {}\".format(decoded_ecg5000.shape))\n",
         "\n",
-        "### Covert to 2D DataFrame -- (\"-1\" = selecting all data)\n",
+        "### Covert to 2D Array -- (\"-1\" = make a dimension (here rows) the size that will use the remaining unspecified elements)\n",
         "new_x_train= x_train.reshape(-1,140)\n",
         "new_decoded_ecg5000 = decoded_ecg5000.reshape(-1,140)\n",
         "\n",
